...
                                else -> bmr.toInt()
                            }
                        }

                        else -> {
                            // Default values if data is missing
                            2000
                        }
                    }

                    // Set calculated values
                    calories = basalMetabolicRate.toString()
                    protein =
...
